--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: analysis
+    needs: build
     
     defaults:
       run:
@@ -67,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: analysis
+    needs: build
       
     defaults:
       run:
@@ -95,6 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: analysis
+    needs: build
     
     defaults:
       run:
