--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -124,6 +124,7 @@ jobs:
         
   unittestes:
     runs-on: ubuntu-latest
+    needs: [Lint,Fotmatter,seccurity]
     defaults:
       run:
         working-directory: ./example-app
