--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,6 +64,9 @@ jobs:
         
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
+      with:
+         vitrualenvs-create: true
+         vitrualenvs-in-project: true
 
     - name: Load cache
       id: cached-poetry-dependencies
@@ -97,6 +100,9 @@ jobs:
         
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
+      with:
+         vitrualenvs-create: true
+         vitrualenvs-in-project: true
 
     - name: Load cache
       id: cached-poetry-dependencies
@@ -129,6 +135,9 @@ jobs:
         
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
+      with:
+         vitrualenvs-create: true
+         vitrualenvs-in-project: true
 
     - name: Load cache
       id: cached-poetry-dependencies
@@ -158,6 +167,9 @@ jobs:
         
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
+      with:
+         vitrualenvs-create: true
+         vitrualenvs-in-project: true
 
     - name: Load cache
       id: cached-poetry-dependencies
