--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,158 +27,121 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-        
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.3
       with:
-         vitrualenvs-create: true
-         vitrualenvs-in-project: true
-                          
-
+        virtualenvs-create: true
+        virtualenvs-in-project: true
     - name: Install dependencies
       run: |
-       poetry install --no-root
+        poetry install --no-root
+    
     - name: Cache build venv
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
         path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
         key: ${{ runner.os }}-venv
-        
-  Lint:
+
+  lint:
     runs-on: ubuntu-latest
     concurrency:
-      group: analysis
-    needs: build
-    
+      group: some-group
     defaults:
       run:
         working-directory: ./example-app
-
+    needs: build
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-        
-    - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.3
-      with:
-         vitrualenvs-create: true
-         vitrualenvs-in-project: true
-
-    - name: Load cache
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
-        key: ${{ runner.os }}-venv
-       
-    - name: Lint with flake8
-      run: |
-        source $VENV poetry run task lint
-        
-   
-        
-  Fotmatter:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.3
+      - name: Load cache
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+          key: ${{ runner.os }}-venv
+      - name: Lint with flake8
+        run: |
+            source $VENV
+            poetry run task lint
+  formatter:
     runs-on: ubuntu-latest
     concurrency:
-      group: analysis
-    needs: build
-      
+      group: some-group
     defaults:
       run:
         working-directory: ./example-app
-
+    needs: build
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-        
-    - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.3
-      with:
-         vitrualenvs-create: true
-         vitrualenvs-in-project: true
-
-    - name: Load cache
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
-        key: ${{ runner.os }}-venv
-   
-    - name: Formatter
-      run: |
-        source $VENV poetry run task formatter
-    
-        
-  seccurity:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.3
+      - name: Load cache
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+          key: ${{ runner.os }}-venv
+      - name: formatter
+        run: |
+            source $VENV
+            poetry run task formatter
+  security:
     runs-on: ubuntu-latest
     concurrency:
-      group: analysis
+      group: some-group
+    defaults:
+      run:
+        working-directory: ./example-app
     needs: build
-    
-    defaults:
-      run:
-        working-directory: ./example-app
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-        
-    - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.3
-      with:
-         vitrualenvs-create: true
-         vitrualenvs-in-project: true
-
-    - name: Load cache
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
-        key: ${{ runner.os }}-venv
-        
-    - name: Security
-      run: |
-        source $VENV poetry run task security
-   
-        
-  unittestes:
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.3
+      - name: Load cache
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+          key: ${{ runner.os }}-venv
+      - name: security
+        run: |
+            source $VENV
+            poetry run task security
+  test:
     runs-on: ubuntu-latest
-    needs: [Lint,Fotmatter,seccurity]
     defaults:
       run:
         working-directory: ./example-app
-
+    needs: ['lint', 'formatter', 'security']
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-        
-    - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.3
-      with:
-         vitrualenvs-create: true
-         vitrualenvs-in-project: true
-
-    - name: Load cache
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
-        key: ${{ runner.os }}-venv
-    
-    - name: Test with pytest
-      run: |
-        source $VENV poetry run task test
-        
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.3
+      - name: Load cache
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: /home/runner/work/iac-labs/iac-labs/example-app/.venv
+          key: ${{ runner.os }}-venv
+      - name: Test with pytest
+        run: |
+            source $VENV
+            poetry run task test
